fixing layout issues in navbar on mobile, and adjusting css styling on jumbotron

--- a/client/src/components/Jumbotron.css
+++ b/client/src/components/Jumbotron.css
@@ -10,9 +10,16 @@
     padding-top:30px;
     margin-top:0;
     padding-left:20px;
+    border-radius:20px;
+    margin-top:20px;
+    user-select: none;
+}
+.gJumboTron h1 {
+    letter-spacing:-.04em;
 }
 .gJumboTron h2 {
     font-size:24px;
     padding-top:0;
     margin-top:0;
+    letter-spacing:-.01em;
 }
