--- a/client/src/components/navbar.css
+++ b/client/src/components/navbar.css
@@ -5,6 +5,7 @@
     box-sizing: border-box;
     height:70px;
     overflow: hidden;
+    min-width:540px;
 }
 
 .logo {
@@ -16,6 +17,10 @@
     font-size:24px;
     display:inline-block;
     padding-right:20px;
+}
+
+.logo:hover {
+    color:rgb(0, 40, 101);
 }
 .navlinks {
     margin:0;
